# kimi-code

./: .npmrc  .oxlintignore  .oxlintrc.json  AGENTS.md  README.md  README.zh-CN.md  REVIEW_REPORT.md  TODO.md  TODO3.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  retry-fixes.patch  start-desktop.bat  start-native.bat  tsconfig.json
.changeset/: README.md  acp-initial.md  add-session-compact-endpoint.md  add-session-status-endpoint.md  chat-header-layout-copy-move.md  chinese-i18n-completion.md  config.json  curly-bikes-swim.md  embed-native-web-assets.md  expose-asyncapi-json.md  expose-model-provider-catalog.md  expose-session-children-server.md  expose-session-fork-server.md  expose-session-undo-server.md  fix-astron-thinking-effort-levels.md  fix-bash-desc-crlf.md  fix-di-instantiation-types.md  fix-i18n-locale-propagation.md  fix-image-paste-rejection-exit.md  fix-pino-pretty-runtime.md  i18n-agent-core.md  invert-protocol-core-dependency.md  kimi-web-sidebar-version.md  manual-swarm-goal-activation.md  move-daemon-services.md  move-server-services.md  native-tools-complete.md  native-tools-fallback-telemetry.md  offload-native-calls.md  polite-prompts-steer.md  qualify-sub-skill-names.md  quiet-sdk-boundary.md  remove-provider-handles-retry.md  (+13 more)
参考目录/_extracted_codex_full/codex-main/codex-rs/uni-mo-rust/: Cargo.toml
参考目录/_extracted_codex_full/codex-main/codex-rs/uni-mo-rust/uni-core-agent/: Cargo.toml
参考目录/_extracted_codex_full/codex-main/codex-rs/uni-mo-rust/uni-core-agent/src/: agent.rs  compact.rs  lib.rs  sampling.rs  stream.rs  types.rs
(+352 files in other folders)
