[package]
name = "uni-core-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
